[EITT-85] 결과 모달 페이지 배경음 재생